nav bar button size on iphone bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ footer {
 @media screen and (max-width: 768px) {
     button {
         width: 80px;
-        font-size: 80%;
+        font-size: 40%;
     }
 
     img {
